# vla_robot

./: README.md
skills/ros1-noetic-general/: SKILL.md
skills/ros1-noetic-general/references/: official-docs.md  project-profiles.md  ros1-full-scope.md  ros1-openclaw-adapter.md
skills/ros1-noetic-general/scripts/: ros1_env_check.sh
src/sim_real_sync/: CMakeLists.txt  package.xml
src/sim_real_sync/config/: sync_params.yaml
src/sim_real_sync/launch/: sim_real_sync.launch
src/sim_real_sync/rviz/: sim_real_sync.rviz
src/sim_real_sync/scripts/: cmd_vel_marker.py  sync_controller.py
src/sim_real_sync/urdf/: README.md  robot.urdf.xacro
src/sim_real_sync/urdf/tb3/: turtlebot3_burger.gazebo.xacro  turtlebot3_burger.urdf.xacro
src/sim_real_sync/worlds/: README.md  demo.world
src/vla_nav/: CMakeLists.txt  package.xml
src/vla_nav/launch/: vla_nav_tb3_gazebo.launch
src/vla_nav/maps/: demo.pgm  demo.yaml
src/vla_nav/scripts/: vla_nav_node.py
